--- a/src/App.css
+++ b/src/App.css
@@ -1,129 +1,158 @@
 :root {
-	--background-color: #1e1e1e;
-	--primary-color: rgb(104, 22, 236);
-	--secondary-color: #998c8c;
-	--text-highlight-color: white;
-	--error-color: red;
-
+  --background-color: #1e1e1e;
+  --primary-color: rgb(104, 22, 236);
+  --secondary-color: #998c8c;
+  --text-highlight-color: white;
+  --error-color: red;
 }
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	background-color: var(--background-color);
-	font-family: "Roboto", sans-serif;
+  padding: 0;
+  margin: 0;
+  border: 0;
+  box-sizing: border-box;
+  background-color: var(--background-color);
+  font-family: "Roboto", sans-serif;
+  user-select: none;
 }
-.title{
-  color:var(--primary-color);
+#time {
+  color: var(--primary-color);
+}
+.title {
+  color: var(--primary-color);
   cursor: pointer;
-  font-family: 'poppins';
+  font-family: "poppins";
+  letter-spacing: 4px;
 }
 
-header {
-	width: 80vw;
-	height: 20vh;
-	position: absolute;
-	top: 0%;
-	left: 50%;
-	transform: translate(-50%, -15%);
-	display: flex;
-	border: none;
+.header {
+  width: 100vw;
+  height: 20vh;
+  position: absolute;
+  top: 0%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  user-select: none;
 }
-.headerleft,
-.headerright {
-	height: 100%;
-	width: 50%;
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
+.optionscontainer {
+  width: 60vh;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
-
+.optionsdiv {
+  width: 100%;
+  padding: 5px;
+}
+.options {
+  padding: 5px;
+  color: var(--secondary-color);
+  font-size: 16px;
+  cursor: pointer;
+}
+.active {
+  color: var(--primary-color);
+}
 .typingarea {
-	width: 96vw;
-	height: 59vh;
-	margin-top: 10%;
-	margin-left: 2%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	user-select: none;
-
+  width: 96vw;
+  height: 59vh;
+  margin-top: 10%;
+  margin-left: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  user-select: none;
 }
 .wordscontainer {
-	height: 50%;
-	width: 70%;
-	overflow: hidden;
+  height: 50%;
+  width: 70%;
+  overflow: hidden;
 }
 
 .reloadbutton {
-	width: 32px;
-	height: 32px;
-	margin-top: 5%;
-  cursor:pointer;
-  overflow:none
+  width: 32px;
+  height: 32px;
+  margin-top: 5%;
+  cursor: pointer;
+  overflow: none;
 }
-.reloadbutton:hover{
-  --reload-button-hover:white
+.reloadbutton:hover {
+  --reload-button-hover: white;
 }
-
 .word {
-	display: inline-block;
-	margin-right: 15px;
-	margin-top: 15px;
+  display: inline-block;
+  margin-right: 15px;
+  margin-top: 15px;
 }
 .letter {
-	font-size: 24px;
-	margin-left:3px;
-	font-family: "Poppins", sans-serif;
-	color: var(--secondary-color);
+  font-size: 24px;
+  margin-left: 3px;
+  font-family: "Poppins", sans-serif;
+  color: var(--secondary-color);
 }
-.correct{
-color:var(--text-highlight-color)
+.correct {
+  color: var(--text-highlight-color);
 }
-.wrong{
-color:var(--error-color)
+.wrong {
+  color: var(--error-color);
 }
 
-
-#carret{
-	background-color: var(--primary-color);
-	width: 3px;
-	height:36px;
-	position: absolute;	
-	animation: blink 0.5s ease-in-out 0s infinite alternate; 
-	border-radius: 15%;
+#ghost {
+  background-color: rgba(255, 255, 255, 0.384);
+  width: 3px;
+  height: 36px;
+  position: absolute;
+  animation: blink 0.5s ease-in-out 0s infinite alternate;
+  border-radius: 15%;
+}
+#carret {
+  background-color: var(--primary-color);
+  width: 3px;
+  height: 36px;
+  position: absolute;
+  animation: blink 0.5s ease-in-out 0s infinite alternate;
+  border-radius: 15%;
 }
 @keyframes blink {
-	0%{ opacity:0.1}
-	 50%{opacity:1}
-	 100%{opacity: 1}
+  0% {
+    opacity: 0.1;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
-.resultpage{
-	width: 96vw;
-	height: 59vh;
-	margin-top:20vh;
-	margin-left: 2%;
-	display: flex;
-	justify-content:space-evenly;
-	align-items: center;
-	flex-wrap: wrap;
+.resultpage {
+  width: 96vw;
+  height: 59vh;
+  margin-top: 20vh;
+  margin-left: 2%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
-.resultdata{
-	width:30%;
-	height:50%;
-	display: flex;
-	justify-content:center;
-	align-items: center;
-   flex-direction: column;
+.resultdata {
+  width: 30%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.heading{
-	font-size: 24px;
-	margin:3px;
-	font-family: "Poppins", sans-serif;
-	color: var(--primary-color);
+.heading {
+  font-size: 22px;
+  margin: 3px;
+  font-family: "Poppins", sans-serif;
+  color: var(--primary-color);
 }
